# llm-verifier-noise

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
chat_template/: fix.txt  olmo3.jinja
configs/accelerate/: single_node_single.yaml
configs/benchmarks/rgym/: decimal_chain_sum_3_6_3_6_3_6.yaml  decimal_chain_sum_3_6_3_6_3_6_temp_1.yaml
configs/rgym/decimal_chain_sum_3_6/: template.yaml
configs/rgym/decimal_chain_sum_3_6/olmo3_7b/: clean.yaml
configs/rgym/decimal_chain_sum_3_6/qwen2.5_1.5b_instruct/: clean.yaml
configs/rgym/decimal_chain_sum_3_6/qwen3_1.7b_base/: clean.yaml
scripts/: README.md  conditional_advantage.sh  token_stats.py  train.sh
scripts/rollouts/: step-1.tsv  step-10.tsv  step-2.tsv  step-3.tsv  step-4.tsv  step-5.tsv  step-6.tsv  step-7.tsv  step-8.tsv  step-9.tsv
src/: __init__.py  configs.py  constants.py  eval_model.py  reward_almost_correct.py  train_model.py  utils.py
src/data/: __init__.py  base.py  cybernative_vulnerability_security_dpo.py  data_factory.py  fine_proofs.py  light_r1.py  openr1_math.py  prime_code.py  rgym.py
src/eval/: __init__.py  base.py  run_benchmark.py
src/eval/code/: cweval.py
src/eval/math/: MATH.py
src/eval/rgym/: base.py  chain_sum.py  figlet_font.py
src/inference_models/: __init__.py  anthropic_model.py  base.py  hf_model.py  inference_model_factory.py  openai_model.py  openrouter_model.py  together_model.py  vllm_model.py  vllm_runner.py
src/statistics/: token_stats.py
src/train/: dpo.py  grpo.py  sft.py  train_tools.py
(+314 files in other folders)
